2009-08-15 Docstrings are now manipulated with decorators defined
           in a new module, docstring.py, thanks to Jason Coombs. - EF

2009-08-14 Add support for image filtering for agg back end. See the example
           demo_agg_filter.py. -JJL

2009-08-09 AnnotationBbox added. Similar to Annotation, but works with
           OffsetBox instead of Text. See the example
           demo_annotation_box.py. -JJL

2009-08-07 BboxImage implemented. Two examples, demo_bboximage.py and
           demo_ribbon_box.py added. - JJL

2009-08-07 In an effort to simplify the backend API, all clipping rectangles
           and paths are now passed in using GraphicsContext objects, even
           on collections and images.  Therefore:

             draw_path_collection(self, master_transform, cliprect, clippath,
                                  clippath_trans, paths, all_transforms, offsets,
                                  offsetTrans, facecolors, edgecolors, linewidths,
                                  linestyles, antialiaseds, urls)

                                             becomes:

             draw_path_collection(self, gc, master_transform, paths, all_transforms,
                                  offsets, offsetTrans, facecolors, edgecolors,
                                  linewidths, linestyles, antialiaseds, urls)



             draw_quad_mesh(self, master_transform, cliprect, clippath,
                            clippath_trans, meshWidth, meshHeight, coordinates,
                            offsets, offsetTrans, facecolors, antialiased,
                            showedges)

                                             becomes:

             draw_quad_mesh(self, gc, master_transform, meshWidth, meshHeight,
                            coordinates, offsets, offsetTrans, facecolors,
                            antialiased, showedges)



             draw_image(self, x, y, im, bbox, clippath=None, clippath_trans=None)
