@@ -1,5 +1,5 @@
 # Wrap the plot commands defined in axes.  The code generated by this
-# file is pasted into pylab.py.  We did try to do this the smart way,
+# file is pasted into pyplot.py.  We did try to do this the smart way,
 # with callable functions and new.function, but could never get the
 # docstrings right for python2.2.  See
 # http://groups.google.com/group/comp.lang.python/browse_frm/thread/dcd63ec13096a0f6/1b14640f3a4ad3dc?#1b14640f3a4ad3dc
@@ -13,7 +13,7 @@ import sys
 import types
 
 # import the local copy of matplotlib, not the installed one
-sys.path.insert(0, './lib')
+#sys.path.insert(0, './lib')
 from matplotlib.axes import Axes
 from matplotlib.cbook import dedent
 
@@ -104,16 +104,16 @@ _misccommands = (
     )
 
 cmappable = {
-    'contour' : 'if %(ret)s._A is not None: gci._current = %(ret)s',
-    'contourf': 'if %(ret)s._A is not None: gci._current = %(ret)s',
-    'hexbin' : 'gci._current = %(ret)s',
-    'scatter' : 'gci._current = %(ret)s',
-    'pcolor'  : 'gci._current = %(ret)s',
-    'pcolormesh'  : 'gci._current = %(ret)s',
-    'imshow'  : 'gci._current = %(ret)s',
-    'spy'    : 'gci._current = %(ret)s',
-    'quiver' : 'gci._current = %(ret)s',
-    'specgram'  : 'gci._current = %(ret)s[-1]',
+    'contour' : 'if %(ret)s._A is not None: sci(%(ret)s)',
+    'contourf': 'if %(ret)s._A is not None: sci(%(ret)s)',
+    'hexbin' :  'sci(%(ret)s)',
+    'scatter' : 'sci(%(ret)s)',
+    'pcolor'  : 'sci(%(ret)s)',
+    'pcolormesh': 'sci(%(ret)s)',
+    'imshow'  : 'sci(%(ret)s)',
+    'spy'    :  'sci(%(ret)s)',
+    'quiver' :  'sci(%(ret)s)',
+    'specgram'  : 'sci(%(ret)s[-1])',
 
 }
 
@@ -233,3 +233,4 @@ cmaps = (
 # add all the colormaps (autumn, hsv, ....)
 for name in cmaps:
     print _fmtcmap%locals()
+
