@@ -129,8 +129,10 @@ def rcdefaults():
     matplotlib.rcdefaults()
     draw_if_interactive()
 
-# The current "image" (ScalarMappable) is tracked here on a
-# per-pylab-session basis:
+# The current "image" (ScalarMappable) is retrieved or set
+# only via the pyplot interface using the following two
+# functions:
+
 def gci():
     """
     Get the current :class:`~matplotlib.cm.ScalarMappable` instance
@@ -142,18 +144,20 @@ def gci():
     :func:`~matplotlib.pyplot.pcolor` and
     :func:`~matplotlib.pyplot.scatter` create
     :class:`~matplotlib.collections.Collection` instances.
+    The current image is an attribute of the current axes, or the
+    nearest earlier axes in the current figure that contains an
+    image.
     """
-    return gci._current
-gci._current = None
-
+    return gcf()._gci()
 
 def sci(im):
     """
     Set the current image (target of colormap commands like
     :func:`~matplotlib.pyplot.jet`, :func:`~matplotlib.pyplot.hot` or
-    :func:`~matplotlib.pyplot.clim`).
+    :func:`~matplotlib.pyplot.clim`).  The current image is an
+    attribute of the current axes.
     """
-    gci._current = im
+    gca()._sci(im)
 
 
 ## Any Artist ##
@@ -1598,7 +1602,6 @@ def autogen_docstring(base):
 
 ## Plotting part 2: autogenerated wrappers for axes methods ##
 
-
 # This function was autogenerated by boilerplate.py.  Do not edit as
 # changes will be lost
 @autogen_docstring(Axes.acorr)
@@ -1830,7 +1833,7 @@ def contour(*args, **kwargs):
         draw_if_interactive()
     finally:
         ax.hold(washold)
-    if ret._A is not None: gci._current = ret
+    if ret._A is not None: sci(ret)
     return ret
 
 # This function was autogenerated by boilerplate.py.  Do not edit as
@@ -1848,7 +1851,7 @@ def contourf(*args, **kwargs):
         draw_if_interactive()
     finally:
         ax.hold(washold)
-    if ret._A is not None: gci._current = ret
+    if ret._A is not None: sci(ret)
     return ret
 
 # This function was autogenerated by boilerplate.py.  Do not edit as
@@ -1956,7 +1959,7 @@ def hexbin(x, y, C=None, gridsize=100, bins=None, xscale='linear', yscale='linea
         draw_if_interactive()
     finally:
         ax.hold(washold)
-    gci._current = ret
+    sci(ret)
     return ret
 
 # This function was autogenerated by boilerplate.py.  Do not edit as
@@ -2010,7 +2013,7 @@ def imshow(X, cmap=None, norm=None, aspect=None, interpolation=None, alpha=1.0, 
         draw_if_interactive()
     finally:
         ax.hold(washold)
-    gci._current = ret
+    sci(ret)
     return ret
 
 # This function was autogenerated by boilerplate.py.  Do not edit as
@@ -2046,7 +2049,7 @@ def pcolor(*args, **kwargs):
         draw_if_interactive()
     finally:
         ax.hold(washold)
-    gci._current = ret
+    sci(ret)
     return ret
 
 # This function was autogenerated by boilerplate.py.  Do not edit as
@@ -2064,7 +2067,7 @@ def pcolormesh(*args, **kwargs):
         draw_if_interactive()
     finally:
         ax.hold(washold)
-    gci._current = ret
+    sci(ret)
     return ret
 
 # This function was autogenerated by boilerplate.py.  Do not edit as
@@ -2154,7 +2157,7 @@ def quiver(*args, **kw):
         draw_if_interactive()
     finally:
         ax.hold(washold)
-    gci._current = ret
+    sci(ret)
     return ret
 
 # This function was autogenerated by boilerplate.py.  Do not edit as
@@ -2190,7 +2193,7 @@ def scatter(x, y, s=20, c='b', marker='o', cmap=None, norm=None, vmin=None, vmax
         draw_if_interactive()
     finally:
         ax.hold(washold)
-    gci._current = ret
+    sci(ret)
     return ret
 
 # This function was autogenerated by boilerplate.py.  Do not edit as
@@ -2244,7 +2247,7 @@ def specgram(x, NFFT=256, Fs=2, Fc=0, detrend=mlab.detrend_none, window=mlab.win
         draw_if_interactive()
     finally:
         ax.hold(washold)
-    gci._current = ret[-1]
+    sci(ret[-1])
     return ret
 
 # This function was autogenerated by boilerplate.py.  Do not edit as
@@ -2262,7 +2265,7 @@ def spy(Z, precision=0, marker=None, markersize=None, aspect='equal', hold=None,
         draw_if_interactive()
     finally:
         ax.hold(washold)
-    gci._current = ret
+    sci(ret)
     return ret
 
 # This function was autogenerated by boilerplate.py.  Do not edit as
@@ -2626,5 +2629,7 @@ def spectral():
     if im is not None:
         im.set_cmap(cm.spectral)
     draw_if_interactive()
+
+
 
 
